# cgame-glfw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/gfxlib/include/: gfxlib.h
libs/gfxlib/src/: gfxlib.c
libs/glad/include/glad/: gl.h
libs/glad/src/: gl.c
src/: main.c
